Revision history for Test-Harness

        - Fix missing parent prereq in META.{yml,json} and NotBuild.PL
          (Dagfinn Ilmari Mannsåker, #89650)
        - Respect PERL5LIB in tainting source handler test (Dagfinn Ilmari Mannsåker)
        - Add harness_class argument to TAP::Harness::Env (Leon Timmermans)

3.29    2013-08-10
        - Get rid of use vars in favor of our in all modules (Leon Timmermans)
          and tests (Karen Etheridge)
        - Added use warnings to all modules (Leon Timmermans) and tests (Karen
          Etheridge)
        - Use parent instead of @ISA in all modules (Leon Timmermans) and
          tests (Karen Etheridge)
        - Fix failing test on VMS (Craig Berry)
        - Improve error message on loading failure (Leon Timmermans, #77730)
        - Use Text::ParseWords, deprecate TAP::Parser::Utils

3.28    2013-05-02
        - Bugfix: Fix taint failures on Windows (Jan Dubois)

3.27    2013-04-30
        - Dramatically reduce memory usage (Nick Clark, RT #84939)
        - Store test_num (in Grammar.pm) as a number instead of a string.
          Reduces memory usage (Nick Clark, RT #84939)
        - PERL5LIB is always propogated to a test's @INC, even with taint more
          (Schwern, RT #84377)
        - restore "always add -w to switches" behavior

3.26    2013-01-16
        - Renamed env.opts.t to env_opts.t (for VMS)
        - Skipped some TAP::Formatter::HTML tests due to this bug: #82738

3.26    2012-06-05
        - Rereleased to fix CPAN permission problem. No functional change.

3.24    2012-06-03
        - RT #74393: corrected typo in M::B integration docs.
        - RT #63473: fix typo.
        - RT #49732: Attempt to load File::Glob::Windows to get correct
          glob semantics on Win32.
        - RT #47890: Don't use Win32::GetShortPathName.
        - RT #64404: Ignore textness ('-T') of script when reading shebang.
        - Handle the case where we don't know the wait status of the