@@ -4,6 +4,7 @@ Revision history for Test-Harness
           (Dagfinn Ilmari Mannsåker, #89650)
         - Respect PERL5LIB in tainting source handler test (Dagfinn Ilmari Mannsåker)
         - Add harness_class argument to TAP::Harness::Env (Leon Timmermans)
+        - Make prove respect environmental variables #28 (Leon Timmermans)
 
 3.29    2013-08-10
         - Get rid of use vars in favor of our in all modules (Leon Timmermans)
